fixed off-center input

--- a/src/App.css
+++ b/src/App.css
@@ -15,5 +15,7 @@
 
 .Deadline-input {
   font-size: 25px;
-  margin: 5px;
+  margin: 0 auto;
+  text-align: center;
 }
+
